[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/GUI/Cursor/Cursor.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/Damage Preview/Cursor/cursor.png" type="Texture" id=2]
[ext_resource path="res://Scenes/GUI/Cursor/Cursor.tres.res" type="Animation" id=3]
[ext_resource path="res://assets/UI/Damage Preview/Cursor/staticCursor.png" type="Texture" id=4]
[ext_resource path="res://assets/sound/cursor/cursorMovement.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/cursor/accept.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/cursor/selectUnit.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sound/cursor/Not Allowed.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/cursor/backSound.wav" type="AudioStream" id=9]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.40652, 13.0471 )

[node name="Cursor" type="Node2D"]
scale = Vector2( 0.58, 0.58 )
script = ExtResource( 1 )

[node name="AnimatedCursor" type="Sprite" parent="."]
position = Vector2( 16, 16 )
scale = Vector2( 0.8, 0.8 )
z_index = 1
texture = ExtResource( 2 )
offset = Vector2( -3, -2 )
region_enabled = true
region_rect = Rect2( 244, 4, 32, 34 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedCursor"]
playback_speed = 3.0
anims/Moving = ExtResource( 3 )

[node name="StaticCursor" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
z_index = 1
texture = ExtResource( 4 )
centered = false
offset = Vector2( -2, -3 )

[node name="MoveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Cursor"

[node name="AcceptSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Cursor"

[node name="SelectUnitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Cursor"

[node name="InvalidSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 10.0
bus = "Cursor"

[node name="BackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Cursor"

[node name="Cursor Bounds" type="KinematicBody2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="Bound" type="CollisionShape2D" parent="Cursor Bounds"]
position = Vector2( 5.32986, 13.7505 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
